<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pmm.simarro.proyectofinal_christianllopis.MapsMenu"
    android:background="@drawable/fondo_oscuro"
    android:padding="5dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top | center"
        android:background="#78ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="50dp"
            android:text="@string/tituloMaps"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold"
            android:background="@color/verdeOscuro"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extremoduro"
            android:id="@+id/buttonExtremoduro" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marea"
            android:id="@+id/buttonMarea" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rulo"
            android:id="@+id/buttonRulo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sharif"
            android:id="@+id/buttonSharif" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rayden"
            android:id="@+id/buttonRayden" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locoplaya"
            android:id="@+id/buttonLocoplaya" />

    </LinearLayout>

</RelativeLayout>
